manifests/kyverno/01-disallow-privileged-containers.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: privileged-containers
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - argocd
                - monitoring
                - falco
                - trivy-system
                - diun
                - kube-bench
                - kubescape
      validate:
        message: "Contenedores privileged no permitidos."
        pattern:
          spec:
            containers:
              - =(securityContext):
                  =(privileged): "false"
