manifests/kyverno/05-disallow-host-pid.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-pid
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: host-pid
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - argocd
                - monitoring
                - falco
                - trivy-system
                - diun
                - kube-bench
      validate:
        message: "hostPID: true no permitido fuera de namespaces de sistema."
        pattern:
          spec:
            =(hostPID): "false"
