manifests/kyverno/06-disallow-host-path.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-path
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: host-path
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - argocd
                - monitoring
                - falco
                - trivy-system
                - diun
                - kube-bench
                - kubescape
      validate:
        message: "Volumes hostPath no permitidos fuera de namespaces de sistema."
        pattern:
          spec:
            =(volumes):
              - X(hostPath): {}
