manifests/kyverno/07-restrict-capabilities.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-capabilities
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-drop-all
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - argocd
                - monitoring
                - falco
                - trivy-system
                - diun
                - kube-bench
                - kubescape
      validate:
        message: "Los contenedores deben dropear todas las capacidades y no agregar ninguna."
        pattern:
          spec:
            containers:
              - securityContext:
                  capabilities:
                    drop: ["ALL"]
